--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ file(GLOB_RECURSE EGIF_SOURCES "egif/*.h" "egif/*.cpp")
 
 add_library(egif STATIC ${EGIF_SOURCES})
 
-add_executable(egif_demo "demo.cpp" "stb_image.h")
-add_executable(egif_test "test.cpp" "stb_image.h")
+add_executable(egif_demo "demo.cpp")
+add_executable(egif_test "test.cpp")
 
 target_link_libraries(egif_demo egif)
 target_link_libraries(egif_test egif)
