GitHub Actions windows use ninja

--- a/.github/workflows/windows-x86.yml
+++ b/.github/workflows/windows-x86.yml
@@ -20,8 +20,8 @@ jobs:
                     call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars32.bat"
                     md build
                     cd build
-                    cmake -DCMAKE_BUILD_TYPE=Release -G "NMake Makefiles" ..
-                    nmake
+                    cmake -DCMAKE_BUILD_TYPE=Release -GNINJA ..
+                    ninja
                     egif_demo.exe
             -   name: Copy File
                 shell: bash
