--- a/.github/workflows/windows-x64.yml
+++ b/.github/workflows/windows-x64.yml
@@ -20,7 +20,7 @@ jobs:
                     call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
                     md build
                     cd build
-                    cmake -DCMAKE_BUILD_TYPE=Release -GNINJA ..
+                    cmake -DCMAKE_BUILD_TYPE=Release -GNinja ..
                     ninja
                     egif_demo.exe
             -   name: Copy File
