Fix GitHub Actions

--- a/.github/workflows/windows-x86.yml
+++ b/.github/workflows/windows-x86.yml
@@ -20,7 +20,8 @@ jobs:
                     call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars32.bat"
                     cmake -DCMAKE_BUILD_TYPE=Release -GNinja -B build .
                     cmake --build build -- all
-                    .\build\egif_demo.exe
+                    cd build
+                    egif_demo.exe
             -   name: Copy File
                 shell: bash
                 run: |
