--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -18,7 +18,8 @@ jobs:
                 run: |
                     cmake -DCMAKE_BUILD_TYPE=Release -B build .
                     cmake --build build -- all
-                    ./build/egif_demo
+                    cd build
+                    ./egif_demo
             -   name: Copy File
                 run: |
                     cd build
